@@ -467,6 +467,9 @@ $FILEICONS = array(
 	'tgz' => 'zip.gif',
 	'gz' => 'zip.gif',
 	'php3' => 'php3.gif',
+	'php4' => 'php3.gif',
+	'php5' => 'php3.gif',
+	'php6' => 'php3.gif',
 	'php' => 'php3.gif',
 	'ttf' => 'ttf.gif',
 	'pcx' => 'pcx.gif',
